assets/css/main.scss
// --------------------------------------------------------
// MIXINS
// --------------------------------------------------------

@mixin sr-btn {
  @apply shadow-lg;
  @apply text-lg;
  @apply cursor-pointer;
  @apply ml-auto mr-auto pt-2 pb-2;
  @apply w-full;
  @apply transition duration-150 ease-in;
  @apply focus:outline-none;
}

// --------------------------------------------------------
// CARDS
// --------------------------------------------------------

.card-background {
  @apply bg-gradient-to-br from-supplementary to-primary;
}

.focus-card {
  @apply text-dark
  rounded-xl
  flex flex-col justify-between items-center
  max-w-md
  p-1.5 pt-10 pb-10 lg:pl-16 lg:pr-16;
}

// --------------------------------------------------------
// TEXT
// --------------------------------------------------------

.heading-top {
  @apply font-bold text-4xl;
  @screen md {
    @apply text-5xl;
  }
  @screen xl {
    @apply text-6xl;
  }
}

.heading-sub {
  @apply text-lg text-supplementary;
  @apply mb-2.5;
  @screen md {
    @apply text-2xl;
  }
}

.title-text {
  @apply font-bold text-3xl text-supplementary;
  //@apply pb-5;
}

.message-header {
  @apply text-center font-bold text-xl;
  @apply mb-2.5;
}

.highlight-text-white {
  @apply transition duration-150
  hover:text-white
  cursor-pointer;
}

.md-h1 {
  @apply text-supplementary;
}

.web-link {
  @apply text-secondary hover:underline;
}

.text-highlight {
  @apply font-bold underline;
}

// --------------------------------------------------------
// FORMS
// --------------------------------------------------------

.form-entry {
  @apply w-72
  flex flex-col
  ml-auto mr-auto;
}

.form-input {
  @apply flex-grow rounded-r-3xl border-2 border-dark;
  @apply p-2 m-1 ml-0;
  @apply focus:outline-none;
}

.form-input-alternative {
  @apply bg-white
  focus:outline-none
  text-dark
  p-2 ml-auto mr-auto w-full md:w-full;
}

.error-message {
  @apply w-full p-2.5
  text-center
  text-dark
  bg-secondary;
}

.notice-message {
  @apply w-full p-2.5
  text-center text-dark
  bg-white;
}

//.dropdown-selector,
//.dropdown-selector::before,
//.dropdown-selector::after {
//  box-sizing: border-box;
//}

.dropdown-selector {
  @apply relative bg-dark
  border border-white
  rounded-2xl
  cursor-pointer
  text-white
  text-xs
  font-bold
  m-2 pt-1 pb-1 pl-1 pr-5;
  display: flex;
  align-items: center;
}

.arrow-selector:after {
  content: "▾";
  position: absolute;
  right: 7.5%;
  top: 15%;
  z-index: 1;
  text-align: center;
  pointer-events: none;
}

.vue__time-picker .dropdown, .vue__time-picker-dropdown, .select-list {
  width: 5rem !important;
}
.vue__time-picker .dropdown ul li:not([disabled]).active,
.vue__time-picker .dropdown ul li:not([disabled]).active:hover,
.vue__time-picker .dropdown ul li:not([disabled]).active:focus,
.vue__time-picker-dropdown ul li:not([disabled]).active,
.vue__time-picker-dropdown ul li:not([disabled]).active:hover,
.vue__time-picker-dropdown ul li:not([disabled]).active:focus {
  background-color: #89B0AE !important;
}

// --------------------------------------------------------
// BUTTONS
// --------------------------------------------------------

.dark-btn {
  @include sr-btn;
  @apply mt-1 mb-1
  rounded-3xl
  bg-dark
  text-white
  hover:text-dark hover:bg-secondary;
}

.light-btn {
  @include sr-btn;
  @apply mt-1 mb-1
  rounded-3xl
  bg-supplementary
  text-dark
  hover:text-dark hover:bg-secondary;
}

.secondary-btn {
  @include sr-btn;
  @apply mt-5 mb-5;
  @apply rounded-lg;
  @apply bg-supplementary;
  @apply text-dark font-bold text-center;
  @apply shadow-inner;
  @apply hover:bg-secondary;
  box-shadow: 5px 5px 5px #425453;
}

.action-btn {
  @apply cursor-pointer
  bg-supplementary
  rounded-2xl
  shadow-md
  text-dark
  text-center
  mt-2 mb-2 pl-1 pr-2 pt-1 pb-1
  transition duration-150
  hover:bg-secondary;
  max-height: 2rem;
}

// --------------------------------------------------------
// MISC ELEMENTS
// --------------------------------------------------------

.no-highlights {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.line-divider {
  @apply self-center;
  @apply mb-5;
  @apply w-56;
  @apply rounded;
  @apply border-4 border-primary;
}

.behind {
  z-index: -1;
}

.centralize {
  @apply ml-auto mr-auto;
  max-width: 1250px;
}

// --------------------------------------------------------
// GLOBALS
// --------------------------------------------------------

select {
  appearance: none;
  outline: none;
  background-color: none;
  border: none;
  margin: 0;
  width: 100%;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
  @apply bg-dark;
}

select::-ms-expand {
  display: none;
}

input[type=number] {
  -moz-appearance: textfield;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type='number']:focus {
  outline: none;
}

button,
textarea,
input,
select,
a{
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
  -webkit-tap-highlight-color: transparent !important;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

// --------------------------------------------------------
// OVERWRITTEN
// --------------------------------------------------------


.vdp-datepicker__calendar {
  @apply ml-auto mr-auto
  text-white rounded-2xl;
  background-color: #555b6e !important;
  border-color: #faf9f9 !important;
  border-width: 0 !important;
}
.vdp-datepicker__calendar header .up:not(.disabled):hover,
.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).year:hover,
.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).month:hover,
.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).day:hover {
  background-color: transparent !important;
  border-color: #faf9f9 !important;
  @apply rounded-2xl;
}
.vdp-datepicker__calendar .cell.selected {
  background-color: transparent !important;
  border-color: #faf9f9 !important;
  color: #ffd6ba;
  @apply rounded-2xl;
}
.vdp-datepicker__calendar header .next:not(.disabled):hover,
.vdp-datepicker__calendar header .prev:not(.disabled):hover {
  background-color: transparent !important;
}
.prev::after {
  border-right-color: #faf9f9 !important;
}
.next::after {
  border-left-color: #faf9f9 !important;
}
.vdp-datepicker__calendar .disabled {
  color: #faf9f9 !important;
  opacity: 25%;
}
.vue__time-picker {
  width: inherit !important;
  margin-top: 5px;
  margin-bottom: 5px;
}
.controls {
  //display: none !important;
  //color: red;
}
.vue__time-picker .controls {
  right: 10px !important;
}
.dropdown-btn {
  color: #faf9f9 !important;
  left: 0 !important;
}
.display-time {
  width: 7em !important;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  border-color: #faf9f9 !important;
  @apply text-white rounded-2xl bg-dark text-left;
}

